--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-image: linear-gradient(
+    135deg,
+    whitesmoke 0%,
+    rgb(253, 230, 124) 100%
+  );
+}
+
+.search-form {
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  background-color: grey;
 }
 
-.App-link {
-  color: #61dafb;
+.search-bar {
+  width: 50%;
+  border: none;
+  padding: 10px;
+  border-top-left-radius: 50px;
+  border-bottom-left-radius: 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-btn {
+  background: linear-gradient(135deg, whitesmoke 0%, rgb(253, 230, 124) 100%);
+  border: none;
+  padding: 10px 20px;
+  color: black;
+  border-top-right-radius: 50px;
+  border-bottom-right-radius: 50px;
+}
+
+.recipes {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
